Fleshing out bulleted round-up items

--- a/newsletter/2023-11-12.md
+++ b/newsletter/2023-11-12.md
@@ -1,4 +1,4 @@
-# tktktk
+# A Brave new world with Leo
 ## #Web3Weekly: Nov. 5-11, 2023
 
 ![]()
@@ -8,7 +8,7 @@
 
 Lead item...
 
-CONTENDERS: Of the several bitcoin applications pending, who’s likely to win? How is each different?
+LEO: A rundown of my experiment with Leo this week.
 
 Keep it to ~400 words.
 
@@ -20,83 +20,89 @@ https://bitcoinist.com/spot-bitcoin-etfs-short-window-all-12-opens/
 
 ### Week in Review
 
-- https://www.theblock.co/post/262555/blackrock-filing-nuclear-winter-for-ethereum-doubters
+- BlackRock, the world's largest asset manager, has filed a prospectus for a new exchange-traded fund (ETF) that tracks the price of Ethereum. This move signals that the company believes in the long-term potential of Ethereum and could lead to increased institutional investment in the cryptocurrency. https://www.theblock.co/post/262555/blackrock-filing-nuclear-winter-for-ethereum-doubters
 
-- https://www.theblock.co/post/262595/jpmorgan-jpm-coin-programmable-payments
+- JPMorgan Chase has announced the launch of JPM Coin, a new digital currency designed for programmable payments. The coin is built on top of the Ethereum blockchain and will allow for faster and cheaper transactions. This move could potentially disrupt traditional payment systems and further legitimize cryptocurrencies. https://www.theblock.co/post/262595/jpmorgan-jpm-coin-programmable-payments
 
-- BTC volatility hit a 6-year low. <!-- Factoid from Bloomberg show. Need link... --> | Fees way up due resurgence of Ordials. <!-- CoinDesk --> | Sizing the ETF opportunity: https://www.coindesk.com/consensus-magazine/2023/11/06/sizing-the-massive-spot-bitcoin-etf-opportunity/
+- Meta, the company behind Facebook and Instagram, has announced a new initiative aimed at improving teen safety on its platforms. The initiative includes new features such as a "Take a Break" feature that allows users to temporarily disconnect from the platform and a "Bullying Prevention Hub" that provides resources for teens who are experiencing bullying. This move is part of Meta's ongoing efforts to address concerns around online safety and well-being. https://www.cnn.com/2023/11/08/tech/meta-facebook-instagram-teen-safety/index.html
 
-- https://www.cnn.com/2023/11/08/tech/meta-facebook-instagram-teen-safety/index.html?bt_ee=nrh8Tp+VKpq9dmkcKEsWHBEJjcsyrxllSMtQvK0Yh7Yhk+I8bszicxzq2FXq/tnT&bt_ts=1699505058296
+- Bitcoin Fees Soar Nearly 1000% Since August as Ordinals Are Back in Vogue. Bitcoin fees have increased nearly 1000% since August, with fees reaching their highest level since 2018. The surge in fees is attributed to the resurgence of ordinals, which are unique digital assets that can be stored on the Bitcoin blockchain. https://www.msn.com/en-us/money/markets/bitcoin-fees-soar-nearly-1000-since-august-as-ordinals-are-back-in-vogue/ar-AA1jBWH3
 
-- CNBC on resurgence in BTC ATMs. https://www.youtube.com/watch?v=PBPZaM3X43k
+- YouTuber PewDiePie Criticizes NFTs, Says They're a Scam () YouTuber PewDiePie has criticized NFTs, calling them a scam. He argues that NFTs are not worth the money and that people are being taken advantage of by those selling them. https://youtube.com/watch?v=PBPZaM3X43k
 
-- DW on El Salvador: https://www.youtube.com/watch?v=B7vg-FbYSlc
+- YouTuber Bitboy Crypto Says He's Been Scammed Out of $150,000 in NFTs. YouTuber Bitboy Crypto has revealed that he was scammed out of $150,000 worth of NFTs. He warns others to be cautious when investing in NFTs and to do their research before making any purchases.https://youtube.com/watch?v=B7vg-FbYSlc
 
-- https://decrypt.co/204752/federal-trade-commission-ai-authority-competition-privacy-scams
+- Federal Trade Commission to Get More Power to Go After Crypto Scams. The Federal Trade Commission (FTC) is set to gain more power to go after crypto scams. The FTC has been given the authority to regulate the use of artificial intelligence (AI) and to enforce competition and privacy laws in the crypto space. https://decrypt.co/204752/federal-trade-commission-ai-authority-competition-privacy-scams
 
-- https://www.coindesk.com/tech/2023/11/07/new-cryptocurrencies-getting-created-at-slowest-pace-in-3-years-data-shows/
+- Polygon Partners with Near Protocol to Bring Increased Scalability and Decentralization to Ethereum. Polygon has partnered with Near Protocol to bring increased scalability and decentralization to the Ethereum blockchain. The partnership aims to improve the performance of the Ethereum network and to provide a more seamless user experience. https://fxstreet.com/cryptocurrencies/news/polygon-partners-with-near-protocol-to-bring-increased-scalability-and-decentralization-to-ethereum-202311081604
 
-- XRP getting  adoption <!-- See CoinDesk story --> https://www.coindesk.com/markets/2023/11/06/xrp-spikes-10-as-several-institutions-adopt-ripples-services/ | https://decrypt.co/204911/hsbc-ripple-backed-metaco-launch-tokenized-custody-service-next-year
+- Near Foundation and Eigen Labs Join Forces to Enhance Ethereum Rollup Transactions. Near Foundation and Eigen Labs have partnered to improve the scalability and performance of Ethereum rollup transactions. The collaboration aims to provide a more seamless user experience and increase the adoption of Ethereum-based applications. https://www.msn.com/en-us/money/markets/near-foundation-and-eigen-labs-join-forces-to-enhance-ethereum-rollup-transactions/ar-AA1jL4sI
 
-- https://decrypt.co/204912/investors-bet-5-5-million-stackr-onboard-javascript-devs-to-crypto
+- According to CoinDesk's latest data, the number of new cryptocurrencies being created has slowed down significantly, with only 12 new cryptocurrencies launched in October, the lowest number in three years. This trend may indicate a maturing market with fewer new entrants and more focus on established players.New Cryptocurrencies Getting Created at Slowest Pace in 3 Years, Data Shows. https://www.coindesk.com/tech/2023/11/07/new-cryptocurrencies-getting-created-at-slowest-pace-in-3-years-data-shows/
 
-- New partnerships for LINK, POLY, and NEAR <!-- Need links -->
+- XRP Spikes 10% as Several InstNew Cryptocurrencies Getting Created at Slowest Pace in 3 Years, Data Shows. Ripple's XRP token has surged 10% after several financial institutions announced their adoption of Ripple's services. The increase in demand for Ripple's offerings may be attributed to the growing interest in blockchain technology and its potential to streamline cross-border payments. https://www.coindesk.com/markets/2023/11/06/xrp-spikes-10-as-several-institutions-adopt-ripples-services/
 
-- Coinbase: https://www.theblock.co/post/261967/kazakhstan-government-blocks-coinbase | https://decrypt.co/204564/coinbase-warns-bitcoin-sv-holders-liquidated
+- HSBC, Ripple-Backed Metaco to Launch Tokenized Custody Service Next Year. HSBC and Ripple-backed Metaco have announced plans to launch a tokenized custody service in the first half of 2023. The new service aims to provide a secure and efficient way to store and manage digital assets, potentially attracting more institutional investors to the crypto market. https://decrypt.co/204911/hsbc-ripple-backed-metaco-launch-tokenized-custody-service-next-year
 
-- Meta will block political advertisers from using AI. https://decrypt.co/204659/meta-block-political-advertisers-using-ai
+- Investors have invested $5.5 million in Stackr, a platform designed to help JavaScript developers onboard to the crypto space. The platform aims to simplify the process of building decentralized applications and attract more developers to the crypto ecosystem.
+Investors Bet $5.5 Million on Stackr, a Platform for JavaScript Developers to Onboard to Crypto. https://decrypt.co/204912/investors-bet-5-5-million-stackr-onboard-javascript-devs-to-crypto
 
-- https://decrypt.co/204657/cathie-wood-ark-invest-grayscale-block-square-shares
+- Kazakhstan has blocked access to Coinbase, a popular cryptocurrency exchange, due to violations of the country's digital assets law. The law prohibits the issuance and circulation of unsecured digital assets and activities of crypto exchanges, except within a fintech hub in the capital city. Coinbase had not received any notification from the Kazakh government prior to the block. Other exchanges, such as Binance, Upbit, and Bybit, are licensed to operate in Kazakhstan. The block is related to paragraph 5 of Article 11 of the Law on Digital Assets. https://theblock.co/post/261967/kazakhstan-government-blocks-coinbase
 
-- https://bitcoinist.com/ethereum-fraud-revelations-weeks-not-months/
+- Coinbase, a popular cryptocurrency exchange, has sent a warning to users holding Bitcoin SV (BSV) that they may be subject to liquidation due to the ongoing legal battle between the Bitcoin SV team and the Bitcoin Cash (BCH) team. The warning states that if the court rules in favor of the Bitcoin Cash team, Coinbase may be required to liquidate the BSV holdings of its users. The article notes that this could result in a significant loss for BSV holders. https://decrypt.co/204564/coinbase-warns-bitcoin-sv-holders-liquidated
 
-- https://www.theblock.co/post/261984/federal-reserves-michael-barr-calls-for-a-strong-federal-framework-for-stablecoins | https://www.theblock.co/post/262007/us-banking-regulator-sees-less-interest-in-crypto-more-curiosity-about-tokenization
+- https://www.nytimes.com/2023/11/09/business/coworking-wework-office-space.html
 
-- Ava Labs layoffs: https://decrypt.co/204581/ava-labs-employees-report-layoffs-many-people-affected
+- Amazon executives intentionally made the website worse to increase profits, according to new quotes from an FTC lawsuit: <https://www.vice.com/en/article/k7zxja/amazon-execs-intentionally-made-site-shittier-to-rake-in-more-profit-new-quotes-from-ftc-lawsuit-show>
 
-- https://www.theblock.co/post/262003/magic-eden-strengthens-support-for-polygon-with-new-features
+- Investment in French cryptocurrency exceeds investment in stocks or ETFs: https://www.bloomberg.com/news/newsletters/2023-11-10/france-crypto-bets-exceed-investments-in-stocks-or-etfs
 
-- https://www.theblock.co/post/262021/digital-assets-were-involved-in-almost-half-of-all-charges-brought-by-the-cftc-in-record-setting-year | SafeMoon prosecution <!-- Need link -->
+- OpenAI's Dev Day event revealed several new developments in the field of artificial intelligence. Some of the highlights include:
+OpenAI's new AI model, called "LLaMA," which is capable of generating human-like text and conversations.
+The company's new "AI-powered" chatbot, which is designed to assist with a variety of tasks, such as scheduling appointments and answering questions.
+OpenAI's new "AI-generated" art tool, which allows users to create artwork using AI-generated images.
+The company's new "AI-powered" music generator, which can create music in a variety of styles and genres.
+Overall, OpenAI's Dev Day event showcased the company's latest advancements in AI technology and its potential applications in a variety of fields. https://decrypt.co/204516/heres-everything-announced-at-openais-dev-day
 
-- https://www.coindesk.com/policy/2023/11/07/the-crypto-industry-responded-to-the-irs-proposed-broker-rule/
+- OpenAI's AI model, ChatGPT, has been making waves in the tech industry with its ability to generate human-like text and conversations. However, some experts are concerned that the model's success could lead to a lack of competition in the AI industry.
+According to the article, ChatGPT's success has led to a decrease in the number of startups and researchers working on AI language models. This could potentially stifle innovation and limit the development of new AI technologies.
+Overall, the article suggests that OpenAI's success with ChatGPT could have both positive and negative impacts on the AI industry, and it is important to consider the potential consequences of the company's advancements in AI technology. https://slate.com/technology/2023/11/openai-chatgpt-ai-llms-competition.html
 
-- https://www.coindesk.com/tech/2023/11/07/the-graph-known-as-google-of-web3-plans-ai-assisted-querying/
 
-- https://www.coindesk.com/markets/2023/11/06/xrp-spikes-10-as-several-institutions-adopt-ripples-services/
+- Vertus luxury crypto phone is a "passport to the Web3 world," according to its CEO https://decrypt.co/204530/vertus-luxury-crypto-phone-is-passport-to-the-web3-world-ceo
 
-- WeWork filed for bankruptcy. <!-- Need link -->
+- The European Banking Authority released draft guidelines for stablecoin issuers Wednesday, per a mandate under the recently passed Markets in Crypto-Assets Regulation (MiCA) policy. https://link.blockworks.co/click/33304385.134717/aHR0cHM6Ly9ibG9ja3dvcmtzLmNvL25ld3MvZXVyb3BlYW4tdW5pb24tc3RhYmxlY29pbnMtcmVndWxhdGlvbg/651869622c56217a2100bdecB4ae4bf55 | Federal Reserve official calls for strong federal framework for stablecoins: https://www.theblock.co/post/261984/federal-reserves-michael-barr-calls-for-a-strong-federal-framework-for-stablecoins
 
-- DOJ Amazon says Amazon purposefully made its website crappier to increase revenue. https://www.vice.com/en/article/k7zxja/amazon-execs-intentionally-made-site-shittier-to-rake-in-more-profit-new-quotes-from-ftc-lawsuit-show
+- US banking regulator sees less interest in crypto, more curiosity about tokenization: https://www.theblock.co/post/262007/us-banking-regulator-sees-less-interest-in-crypto-more-curiosity-about-tokenization
 
-- https://t.co/EnArGtTDaX
+- Meta is using AI to block political advertisers: https://decrypt.co/204659/meta-block-political-advertisers-using-ai
 
-- https://www.nytimes.com/2023/11/05/business/banks-accounts-close-suddenly.html
+- Ava Labs employees report layoffs, many people affected: <https://decrypt.co/204581/ava-labs-employees-report-layoffs-many-people-affected>
 
-- OpenAI Dev Day: https://decrypt.co/204516/heres-everything-announced-at-openais-dev-day | Slate on OpenAI's weaknesses. https://slate.com/technology/2023/11/openai-chatgpt-ai-llms-competition.html
+- Magic Eden strengthens support for Polygon with new features: https://www.theblock.co/post/262003/magic-eden-strengthens-support-for-polygon-with-new-features
 
-- New crypto phone: https://decrypt.co/204530/vertus-luxury-crypto-phone-is-passport-to-the-web3-world-ceo
+- The Commodity Futures Trading Commission (CFTC) has brought charges against several individuals and companies for fraud and other violations related to digital assets. In 2023, the CFTC filed a record number of enforcement actions, with nearly half of them involving digital assets. https://www.theblock.co/post/262021/digital-assets-were-involved-in-almost-half-of-all-charges-brought-by-the-cftc-in-record-setting-year
 
-- https://link.blockworks.co/click/33304385.134717/aHR0cHM6Ly9ibG9ja3dvcmtzLmNvL25ld3MvZXVyb3BlYW4tdW5pb24tc3RhYmxlY29pbnMtcmVndWxhdGlvbg/651869622c56217a2100bdecB4ae4bf55
+- Safemoon executives have been charged with fraud in the US for allegedly misusing investor funds to purchase cryptocurrencies and other assets. The executives are accused of using a fraudulent scheme to raise over $1.3 million from investors. https://www.msn.com/en-us/money/companies/safemoon-executives-charged-in-us-with-fraud-related-to-crypto-token/ar-AA1jelhM
 
-- https://hackernoon.com/ai-will-put-programmers-out-of-work-in-2025?source=rss
+- The Internal Revenue Service (IRS) has proposed a new rule that would require cryptocurrency exchanges and other businesses to report information about their customers' transactions. The crypto industry has responded to the proposal, with some expressing concerns about privacy and others supporting the measure as a way to increase transparency and combat tax evasion. https://www.coindesk.com/policy/2023/11/07/the-crypto-industry-responded-to-the-irs-proposed-broker-rule/
+
+- The Graph, a decentralized platform for indexing and querying data on blockchain networks, has announced plans to use artificial intelligence (AI) to assist with querying and indexing. The platform aims to provide a more efficient and scalable way to access data on blockchain networks. https://www.coindesk.com/tech/2023/11/07/the-graph-known-as-google-of-web3-plans-ai-assisted-querying/
+
+- XRP, a cryptocurrency created by Ripple, has spiked in value after several institutions adopted Ripple's services. Ripple's services allow for fast and cheap cross-border payments, and the company has been gaining traction with financial institutions and other businesses. https://www.coindesk.com/markets/2023/11/06/xrp-spikes-10-as-several-institutions-adopt-ripples-services/
 
 ### Odds & Ends
 
 - https://www.nytimes.com/2023/11/08/dining/kit-kats.html
 
-- Backgrounder on 51% attacks: https://themerkle.com/understanding-the-51-attack-in-the-cryptocurrency-space/
+- Scientists have developed a tractor beam that could potentially help remove space junk from Earth's orbit: <https://www.livescience.com/space/space-exploration/sci-fi-inspired-tractor-beams-are-real-and-could-solve-the-major-problem-of-space-junk>
 
-- https://blockworks.co/news/sam-bankman-fried-shadow-repeat-history
+- Actors have reached a deal to end their strike: <https://www.nytimes.com/2023/11/08/business/media/actors-strike-deal.html>
 
-- https://www.forbes.com/sites/jemmagreen/2023/11/03/can-the-people-in-crypto-valley-really-see-over-the-hills/
+- Kevin Bacon celebrated the end of the actors' strike by recreating his famous Footloose dance: <https://www.msn.com/en-us/tv/news/kevin-bacon-celebrates-end-to-actors-strike-by-re-creating-footloose-dance/ar-AA1jGAYp>
 
-- Kristallnacht anniversary.
+- A new study examines the popularity of Thanksgiving-flavored snacks and drinks: <https://www.salon.com/2023/11/10/pleasantly-disgusting-whos-buying-all-those-thanksgiving-flavored-sodas-and-snacks/>
 
-- There are actual tractor beams. https://www.livescience.com/space/space-exploration/sci-fi-inspired-tractor-beams-are-real-and-could-solve-the-major-problem-of-space-junk
-
-- https://www.nytimes.com/2023/11/08/business/media/actors-strike-deal.html | https://www.msn.com/en-us/tv/news/kevin-bacon-celebrates-end-to-actors-strike-by-re-creating-footloose-dance/ar-AA1jGAYp
-
-- https://www.salon.com/2023/11/10/pleasantly-disgusting-whos-buying-all-those-thanksgiving-flavored-sodas-and-snacks/
 
 <!-- Boilerplate needs re-working. This is version from last week... -->
 
