--- a/newsletter/2023-11-12.md
+++ b/newsletter/2023-11-12.md
@@ -1,108 +1,43 @@
-# A Brave new world with Leo
-## #Web3Weekly: Nov. 5-11, 2023
+# #Web3Weekly: Nov. 5-11, 2023
+
+<!--
 
 ![]()
 *Photo by TTKTK via TKTKTK*
 
-<!--
-
-Lead item...
-
-LEO: A rundown of my experiment with Leo this week.
-
-Keep it to ~400 words.
-
-Some links...
-
-https://bitcoinist.com/spot-bitcoin-etfs-short-window-all-12-opens/
-
 -->
+
+**You know things are looking up** in crypto world when the pace of product and partnership announcements gets this frenzied. But the week's major headlines also comprised a few casualties and missteps as well...
 
 ### Week in Review
 
-- BlackRock, the world's largest asset manager, has filed a prospectus for a new exchange-traded fund (ETF) that tracks the price of Ethereum. This move signals that the company believes in the long-term potential of Ethereum and could lead to increased institutional investment in the cryptocurrency. https://www.theblock.co/post/262555/blackrock-filing-nuclear-winter-for-ethereum-doubters
+- **BlackRock filed a proposal** with U.S. regulators Thursday to offer an exchange-traded fund that holds ether tokens (ETH) on shareholders' behalf. The news helped propel ETH's price to a weekly gain of 8%, slightly ahead of bitcoin's 6% rally. ([The Block](https://www.theblock.co/post/262555/blackrock-filing-nuclear-winter-for-ethereum-doubters))
 
-- JPMorgan Chase has announced the launch of JPM Coin, a new digital currency designed for programmable payments. The coin is built on top of the Ethereum blockchain and will allow for faster and cheaper transactions. This move could potentially disrupt traditional payment systems and further legitimize cryptocurrencies. https://www.theblock.co/post/262595/jpmorgan-jpm-coin-programmable-payments
+- **Bitcoin network fees are up almost 1,000%** since August, boosted in part by a resurgence in creation of Ordinals, a type of non-fungible token based on bitcoin. ([CoinDesk](https://www.msn.com/en-us/money/markets/bitcoin-fees-soar-nearly-1000-since-august-as-ordinals-are-back-in-vogue/ar-AA1jBWH3))
 
-- Meta, the company behind Facebook and Instagram, has announced a new initiative aimed at improving teen safety on its platforms. The initiative includes new features such as a "Take a Break" feature that allows users to temporarily disconnect from the platform and a "Bullying Prevention Hub" that provides resources for teens who are experiencing bullying. This move is part of Meta's ongoing efforts to address concerns around online safety and well-being. https://www.cnn.com/2023/11/08/tech/meta-facebook-instagram-teen-safety/index.html
+- **JPMorgan Chase added automated payments** features to its permissioned blockchain platform, which uses a token dubbed JPM Coin. The banking giant launched the system in 2019 and recently announced it has surpassed $1 billion in daily transactions. ([The Block](https://www.theblock.co/post/262595/jpmorgan-jpm-coin-programmable-payments))
 
-- Bitcoin Fees Soar Nearly 1000% Since August as Ordinals Are Back in Vogue. Bitcoin fees have increased nearly 1000% since August, with fees reaching their highest level since 2018. The surge in fees is attributed to the resurgence of ordinals, which are unique digital assets that can be stored on the Bitcoin blockchain. https://www.msn.com/en-us/money/markets/bitcoin-fees-soar-nearly-1000-since-august-as-ordinals-are-back-in-vogue/ar-AA1jBWH3
+- **HSBC and the Ripple-backed startup Metaco** announced plans to launch a custody service for tokenized securities. ([Decrypt](https://decrypt.co/204911/hsbc-ripple-backed-metaco-launch-tokenized-custody-service-next-year))
 
-- YouTuber PewDiePie Criticizes NFTs, Says They're a Scam () YouTuber PewDiePie has criticized NFTs, calling them a scam. He argues that NFTs are not worth the money and that people are being taken advantage of by those selling them. https://youtube.com/watch?v=PBPZaM3X43k
+- **The NEAR Foundation announced** new partnerships with [Polygon Partners](https://fxstreet.com/cryptocurrencies/news/polygon-partners-with-near-protocol-to-bring-increased-scalability-and-decentralization-to-ethereum-202311081604) and [Eigen Labs](https://www.msn.com/en-us/money/markets/near-foundation-and-eigen-labs-join-forces-to-enhance-ethereum-rollup-transactions/ar-AA1jL4sI) to enhance capatability with the Ethereum ecosystem.
 
-- YouTuber Bitboy Crypto Says He's Been Scammed Out of $150,000 in NFTs. YouTuber Bitboy Crypto has revealed that he was scammed out of $150,000 worth of NFTs. He warns others to be cautious when investing in NFTs and to do their research before making any purchases.https://youtube.com/watch?v=B7vg-FbYSlc
+- **The NFT platform Magic Eden** unveiled new features that expand support for Polygon-based tokens. ([The Block](https://www.theblock.co/post/262003/magic-eden-strengthens-support-for-polygon-with-new-features))
 
-- Federal Trade Commission to Get More Power to Go After Crypto Scams. The Federal Trade Commission (FTC) is set to gain more power to go after crypto scams. The FTC has been given the authority to regulate the use of artificial intelligence (AI) and to enforce competition and privacy laws in the crypto space. https://decrypt.co/204752/federal-trade-commission-ai-authority-competition-privacy-scams
+- **Ava Labs announced layoffs** that will reduce its workforce by 12%. ([Benzinga](https://www.msn.com/en-us/money/other/ava-labs-creator-of-avalanche-blockchain-cuts-workforce-in-strategic-refocus/ar-AA1jxAg5))
 
-- Polygon Partners with Near Protocol to Bring Increased Scalability and Decentralization to Ethereum. Polygon has partnered with Near Protocol to bring increased scalability and decentralization to the Ethereum blockchain. The partnership aims to improve the performance of the Ethereum network and to provide a more seamless user experience. https://fxstreet.com/cryptocurrencies/news/polygon-partners-with-near-protocol-to-bring-increased-scalability-and-decentralization-to-ethereum-202311081604
+- **The Graph**, a decentralized platform for indexing and querying data on blockchain networks, announced plans to add AI-based functionality. ([CoinDesk](https://www.coindesk.com/tech/2023/11/07/the-graph-known-as-google-of-web3-plans-ai-assisted-querying/))
 
-- Near Foundation and Eigen Labs Join Forces to Enhance Ethereum Rollup Transactions. Near Foundation and Eigen Labs have partnered to improve the scalability and performance of Ethereum rollup transactions. The collaboration aims to provide a more seamless user experience and increase the adoption of Ethereum-based applications. https://www.msn.com/en-us/money/markets/near-foundation-and-eigen-labs-join-forces-to-enhance-ethereum-rollup-transactions/ar-AA1jL4sI
+- **New cryptocurrencies are being created** at the slowest pace in three years, according to data from auditor CertiK. Excluding memecoins, 293 new tokens were created in the third quarter, about one-fourth the number created at the recent peak of the crypto market's valuation in the fourth period of 2021. ([CoinDesk](https://www.coindesk.com/tech/2023/11/07/new-cryptocurrencies-getting-created-at-slowest-pace-in-3-years-data-shows/))
 
-- According to CoinDesk's latest data, the number of new cryptocurrencies being created has slowed down significantly, with only 12 new cryptocurrencies launched in October, the lowest number in three years. This trend may indicate a maturing market with fewer new entrants and more focus on established players.New Cryptocurrencies Getting Created at Slowest Pace in 3 Years, Data Shows. https://www.coindesk.com/tech/2023/11/07/new-cryptocurrencies-getting-created-at-slowest-pace-in-3-years-data-shows/
+- **In its recently ended 2023 fiscal year,** the U.S. Commodity Futures Trading Commission filed a record number of enforcement actions, nearly half of them involving digital assets. ([The Block](https://www.theblock.co/post/262021/digital-assets-were-involved-in-almost-half-of-all-charges-brought-by-the-cftc-in-record-setting-year))
 
-- XRP Spikes 10% as Several InstNew Cryptocurrencies Getting Created at Slowest Pace in 3 Years, Data Shows. Ripple's XRP token has surged 10% after several financial institutions announced their adoption of Ripple's services. The increase in demand for Ripple's offerings may be attributed to the growing interest in blockchain technology and its potential to streamline cross-border payments. https://www.coindesk.com/markets/2023/11/06/xrp-spikes-10-as-several-institutions-adopt-ripples-services/
-
-- HSBC, Ripple-Backed Metaco to Launch Tokenized Custody Service Next Year. HSBC and Ripple-backed Metaco have announced plans to launch a tokenized custody service in the first half of 2023. The new service aims to provide a secure and efficient way to store and manage digital assets, potentially attracting more institutional investors to the crypto market. https://decrypt.co/204911/hsbc-ripple-backed-metaco-launch-tokenized-custody-service-next-year
-
-- Investors have invested $5.5 million in Stackr, a platform designed to help JavaScript developers onboard to the crypto space. The platform aims to simplify the process of building decentralized applications and attract more developers to the crypto ecosystem.
-Investors Bet $5.5 Million on Stackr, a Platform for JavaScript Developers to Onboard to Crypto. https://decrypt.co/204912/investors-bet-5-5-million-stackr-onboard-javascript-devs-to-crypto
-
-- Kazakhstan has blocked access to Coinbase, a popular cryptocurrency exchange, due to violations of the country's digital assets law. The law prohibits the issuance and circulation of unsecured digital assets and activities of crypto exchanges, except within a fintech hub in the capital city. Coinbase had not received any notification from the Kazakh government prior to the block. Other exchanges, such as Binance, Upbit, and Bybit, are licensed to operate in Kazakhstan. The block is related to paragraph 5 of Article 11 of the Law on Digital Assets. https://theblock.co/post/261967/kazakhstan-government-blocks-coinbase
-
-- Coinbase, a popular cryptocurrency exchange, has sent a warning to users holding Bitcoin SV (BSV) that they may be subject to liquidation due to the ongoing legal battle between the Bitcoin SV team and the Bitcoin Cash (BCH) team. The warning states that if the court rules in favor of the Bitcoin Cash team, Coinbase may be required to liquidate the BSV holdings of its users. The article notes that this could result in a significant loss for BSV holders. https://decrypt.co/204564/coinbase-warns-bitcoin-sv-holders-liquidated
-
-- https://www.nytimes.com/2023/11/09/business/coworking-wework-office-space.html
-
-- Amazon executives intentionally made the website worse to increase profits, according to new quotes from an FTC lawsuit: <https://www.vice.com/en/article/k7zxja/amazon-execs-intentionally-made-site-shittier-to-rake-in-more-profit-new-quotes-from-ftc-lawsuit-show>
-
-- Investment in French cryptocurrency exceeds investment in stocks or ETFs: https://www.bloomberg.com/news/newsletters/2023-11-10/france-crypto-bets-exceed-investments-in-stocks-or-etfs
-
-- OpenAI's Dev Day event revealed several new developments in the field of artificial intelligence. Some of the highlights include:
-OpenAI's new AI model, called "LLaMA," which is capable of generating human-like text and conversations.
-The company's new "AI-powered" chatbot, which is designed to assist with a variety of tasks, such as scheduling appointments and answering questions.
-OpenAI's new "AI-generated" art tool, which allows users to create artwork using AI-generated images.
-The company's new "AI-powered" music generator, which can create music in a variety of styles and genres.
-Overall, OpenAI's Dev Day event showcased the company's latest advancements in AI technology and its potential applications in a variety of fields. https://decrypt.co/204516/heres-everything-announced-at-openais-dev-day
-
-- OpenAI's AI model, ChatGPT, has been making waves in the tech industry with its ability to generate human-like text and conversations. However, some experts are concerned that the model's success could lead to a lack of competition in the AI industry.
-According to the article, ChatGPT's success has led to a decrease in the number of startups and researchers working on AI language models. This could potentially stifle innovation and limit the development of new AI technologies.
-Overall, the article suggests that OpenAI's success with ChatGPT could have both positive and negative impacts on the AI industry, and it is important to consider the potential consequences of the company's advancements in AI technology. https://slate.com/technology/2023/11/openai-chatgpt-ai-llms-competition.html
-
-
-- Vertus luxury crypto phone is a "passport to the Web3 world," according to its CEO https://decrypt.co/204530/vertus-luxury-crypto-phone-is-passport-to-the-web3-world-ceo
-
-- The European Banking Authority released draft guidelines for stablecoin issuers Wednesday, per a mandate under the recently passed Markets in Crypto-Assets Regulation (MiCA) policy. https://link.blockworks.co/click/33304385.134717/aHR0cHM6Ly9ibG9ja3dvcmtzLmNvL25ld3MvZXVyb3BlYW4tdW5pb24tc3RhYmxlY29pbnMtcmVndWxhdGlvbg/651869622c56217a2100bdecB4ae4bf55 | Federal Reserve official calls for strong federal framework for stablecoins: https://www.theblock.co/post/261984/federal-reserves-michael-barr-calls-for-a-strong-federal-framework-for-stablecoins
-
-- US banking regulator sees less interest in crypto, more curiosity about tokenization: https://www.theblock.co/post/262007/us-banking-regulator-sees-less-interest-in-crypto-more-curiosity-about-tokenization
-
-- Meta is using AI to block political advertisers: https://decrypt.co/204659/meta-block-political-advertisers-using-ai
-
-- Ava Labs employees report layoffs, many people affected: <https://decrypt.co/204581/ava-labs-employees-report-layoffs-many-people-affected>
-
-- Magic Eden strengthens support for Polygon with new features: https://www.theblock.co/post/262003/magic-eden-strengthens-support-for-polygon-with-new-features
-
-- The Commodity Futures Trading Commission (CFTC) has brought charges against several individuals and companies for fraud and other violations related to digital assets. In 2023, the CFTC filed a record number of enforcement actions, with nearly half of them involving digital assets. https://www.theblock.co/post/262021/digital-assets-were-involved-in-almost-half-of-all-charges-brought-by-the-cftc-in-record-setting-year
-
-- Safemoon executives have been charged with fraud in the US for allegedly misusing investor funds to purchase cryptocurrencies and other assets. The executives are accused of using a fraudulent scheme to raise over $1.3 million from investors. https://www.msn.com/en-us/money/companies/safemoon-executives-charged-in-us-with-fraud-related-to-crypto-token/ar-AA1jelhM
-
-- The Internal Revenue Service (IRS) has proposed a new rule that would require cryptocurrency exchanges and other businesses to report information about their customers' transactions. The crypto industry has responded to the proposal, with some expressing concerns about privacy and others supporting the measure as a way to increase transparency and combat tax evasion. https://www.coindesk.com/policy/2023/11/07/the-crypto-industry-responded-to-the-irs-proposed-broker-rule/
-
-- The Graph, a decentralized platform for indexing and querying data on blockchain networks, has announced plans to use artificial intelligence (AI) to assist with querying and indexing. The platform aims to provide a more efficient and scalable way to access data on blockchain networks. https://www.coindesk.com/tech/2023/11/07/the-graph-known-as-google-of-web3-plans-ai-assisted-querying/
-
-- XRP, a cryptocurrency created by Ripple, has spiked in value after several institutions adopted Ripple's services. Ripple's services allow for fast and cheap cross-border payments, and the company has been gaining traction with financial institutions and other businesses. https://www.coindesk.com/markets/2023/11/06/xrp-spikes-10-as-several-institutions-adopt-ripples-services/
+- **Web2 is going just great.** Facebook parent Meta said it will [block political campaigns](https://www.reuters.com/technology/meta-bar-political-advertisers-using-generative-ai-ads-tools-2023-11-06/) and other advertisers in regulated industries from using its AI tools. But in a more worrisome development for the company, internal emails submitted as evidence in a Massachusetts lawsuit show CEO Mark Zuckerberg has personally and repeatedly [resisted improved safety measures](https://www.cnn.com/2023/11/08/tech/meta-facebook-instagram-teen-safety/index.html) for teen users of Facebook and Instagram. Rival Amazon faced similar woes in its antitrust dispute with the Federal Trade Commission. Documents in that case show Amazon executives itentionally [made the Amazon.com website worse](https://www.vice.com/en/article/k7zxja/amazon-execs-intentionally-made-site-shittier-to-rake-in-more-profit-new-quotes-from-ftc-lawsuit-show) to increase profits.
 
 ### Odds & Ends
 
-- https://www.nytimes.com/2023/11/08/dining/kit-kats.html
+- **That's no moon.** Scientists have developed an actual tractor beam that could potentially help remove space junk from Earth's orbit. ([Live Science](https://www.livescience.com/space/space-exploration/sci-fi-inspired-tractor-beams-are-real-and-could-solve-the-major-problem-of-space-junk))
 
-- Scientists have developed a tractor beam that could potentially help remove space junk from Earth's orbit: <https://www.livescience.com/space/space-exploration/sci-fi-inspired-tractor-beams-are-real-and-could-solve-the-major-problem-of-space-junk>
-
-- Actors have reached a deal to end their strike: <https://www.nytimes.com/2023/11/08/business/media/actors-strike-deal.html>
-
-- Kevin Bacon celebrated the end of the actors' strike by recreating his famous Footloose dance: <https://www.msn.com/en-us/tv/news/kevin-bacon-celebrates-end-to-actors-strike-by-re-creating-footloose-dance/ar-AA1jGAYp>
-
-- A new study examines the popularity of Thanksgiving-flavored snacks and drinks: <https://www.salon.com/2023/11/10/pleasantly-disgusting-whos-buying-all-those-thanksgiving-flavored-sodas-and-snacks/>
-
+- **Kevin Bacon celebrated** the end of Hollywood's actors' strike by re-creating his famous Footloose moves. ([Hollywood Reporter](https://www.msn.com/en-us/tv/news/kevin-bacon-celebrates-end-to-actors-strike-by-re-creating-footloose-dance/ar-AA1jGAYp))
 
 <!-- Boilerplate needs re-working. This is version from last week... -->
 
