Fleshing out hed, art, and round-up items.

--- a/newsletter/2023-11-19.md
+++ b/newsletter/2023-11-19.md
@@ -1,65 +1,68 @@
-# tktkt
+# Trying Brave's new AI Leo 
 ## #Web3Weekly: Nov. 12-18, 2023
 
-![]()
-*Photo by TTKTK via TKTKTK*
+![Leo Hard at Work](https://w3w.news/img/leo-hard-at-work-final.jpg)
+*"Leo Hard at Work." Illustration by Peter A. McKay x DALL-E*
 
 <!-- Lead item: ~400 words. Using Leo to work on the newsletter -->
 
-Note: Some AI-generated links here may be hallucinations...
-
-
 ### Week in Review
-
-- https://www.moodysanalytics.com/articles/2023/moody_launches_new_digital_asset_monitor_to_track_risk | https://twitter.com/CampbellJAustin/status/1724917730573275445
-
-- https://cointelegraph.com/news/bakkt-shifts-focus-custody-services-adds-cryptocurrency-support-doge-shib-coins
-
-- https://www.washingtonpost.com/technology/2023/11/16/ai-kids-app-review/
-
-- **Hallucination** https://decrypt.co/115849/web3-is-about-more-than-just-crypto-heres-why-it-matters: This Decrypt article discusses how web3 goes beyond cryptocurrency by focusing on decentralization, openness, and user empowerment.
-
-- **Hallucination** https://www.theblock.co/post/155587/web3-is-coming-but-its-not-what-you-think-its-going-to-be: The Block article interviews Anthropic CEO on what web3 may actually look like in practice and how it could evolve differently than current expectations.
-
-- https://cointelegraph.com/news/web-3-0-the-next-generation-of-the-internet-explained: This Cointelegraph deep dive explains the core concepts of web3 including decentralization, distributed data ownership, and new economic models driven by crypto.
-
-- https://www.technologyreview.com/2021/12/06/1039501/web3-metaverse-cryptocurrency-decentralization-centralization/: MIT Technology Review article discusses challenges web3 faces in achieving true decentralization at scale.
-
-- https://www.theblock.co/post/155588/web3-is-coming-but-its-not-what-you-think-its-going-to-be: This article discusses how web3 may evolve differently than current expectations, focusing more on open protocols than specific companies or technologies.
-
-- https://bitcoinist.com/web3-will-be-built-on-bitcoin-says-jack-dorsey/: This Bitcoinist article summarizes Jack Dorsey's view that Bitcoin's decentralization makes it well-suited to power web3 applications and services.
-
-- https://cointelegraph.com/news/web-3-0-the-next-generation-of-the-internet-explained: This Cointelegraph article provides a high-level overview of the core concepts behind web3 such as decentralization and distributed ownership of data.  
-
-- https://hackernoon.com/web3-is-coming-heres-what-you-need-to-know-about-the-next-generation-of-the-internet-2a5b3e8b5f7e: This Hacker Noon article discusses how web3 aims to give users more control over their data and digital identities.
-
-- https://www.technologyreview.com/2021/12/06/1039501/web3-metaverse-cryptocurrency-decentralization-centralization/: MIT Technology Review analyzes challenges around achieving true decentralization at web3's potential scale.
-
-- https://coindesk.com/learn/web-3-explained/: CoinDesk's introductory guide to web3 covers its relationship to crypto and focus on open protocols over corporate platforms.
-
 
 - Crypto VC activity has hit a new low, says PitchBook Guy: https://www.youtube.com/watch?v=LjSbkKF_m_c&pp=ygUQYmxvb21iZXJnIGNyeXB0bw%3D%3D
 
-- Avalance/Apollo partnership <!-- need link -->
-
-- New consortium of 17 financial entities including JPM and Apollo are testing tokenization of assets. <!-- need link -->
-
-- Bloomberg says correlation between bitcoin and stocks is lowest since the pandemic. <!-- need link -->
-
-- False XRP filing in DE. <!-- need link -->
+- Bloomberg says correlation between bitcoin and stocks is lowest since the pandemic. https://www.msn.com/en-us/money/markets/bitcoin-stocks-correlation-now-most-negative-since-covid-s-onset/ar-AA1jXLc2
 
 - HRF launched a new CBDC tracker. https://cbdctracker.hrf.org/home
 
-- tk
+- Infura launches a decentralized infrastructure network to provide blockchain access without centralized control. https://blockworks.co/news/infura-decentralized-infrastructure-network
+
+- JPMorgan and Apollo Global unveil a new blockchain-based platform for private markets. https://finance.yahoo.com/news/jpmorgan-apollo-global-unveil-blockchain-051756777.html
+
+- Microsoft partners with Tencent and Infura to provide decentralized identity services on their blockchain infrastructure network. https://cointelegraph.com/news/microsoft-tencent-infura-network-partnership
+
+- An article discussing how Asia is becoming a hub for web3 game development while the US dominates funding in the space. https://venturebeat.com/games/game7-says-asia-is-a-hub-for-web3-game-development-while-u-s-dominates-funding/
+
+- Money is flowing back into crypto stablecoins for the first time since the 2022 market collapse. https://www.thestreet.com/crypto/markets/money-is-flowing-into-crypto-stablecoins-for-first-time-since-collapse-of-2022
+
+- A leading Chinese games company is allocating $100 million to invest in Bitcoin and other cryptocurrencies. https://www.thestreet.com/crypto/markets/leading-chinese-games-company-is-allocating-100-million-to-bitcoin-crypto
+
+- An article about a crypto laundering scheme moving funds from China to Taiwan through bank transactions. https://decrypt.co/206413/crypto-laundering-scheme-bank-transactions-china-taiwan
+
+- Chelsea Manning discusses privacy issues around AI technology at the Web Summit conference. https://decrypt.co/206449/chelsea-manning-web-summit-ai-technology-privacy
+
+- An opinion piece speculating that SEC chair Gary Gensler's political ambitions may be affecting the decision on a spot Bitcoin ETF. https://www.coindesk.com/policy/2023/11/14/cathie-wood-speculates-gary-genslers-political-ambitions-are-affecting-spot-btc-etf-judgement/
+
+- The SEC delays a decision on a Hashdex Bitcoin spot ETF and a Grayscale Ether futures filing. https://www.coindesk.com/policy/2023/11/15/sec-delays-decision-on-hashdex-bitcoin-spot-etf-application-grayscale-ether-futures-filing/
+
+- Republic is launching a profit-sharing token on Avalanche that will pay investors venture capital-style dividends. https://www.coindesk.com/business/2023/11/17/republics-profit-sharing-token-on-avalanche-will-pay-investors-vc-dividends/
+
+- Mastercard says customers are too comfortable with today's money to adopt CBDCs according to comments made to CNBC. https://www.coindesk.com/policy/2023/11/17/mastercard-says-customers-are-too-comfortable-with-todays-money-for-adoption-of-cbdcs-cnbc/
+
+- BitGo CFO predicts more Bitcoin ETF rejections from the SEC are likely in the near future. https://www.coindesk.com/business/2023/11/17/more-bitcoin-etf-rejections-quite-likely-bitgos-belshe-says/
+
+- Eigenlayer plans to enable staking with operators of its data availability layer in the first half of 2024. https://www.theblock.co/post/263473/eigenlayer-to-enable-staking-with-operators-of-data-availability-layer-in-h1-2024
+
+- Grayscale CEO hints that a Bitcoin ETF approval from the SEC may be coming soon, saying the company is ready for approval. https://www.thestreet.com/crypto/markets/grayscale-ceo-hints-at-bitcoin-etf-approval-were-ready-for-the-main-event
+
+- An article on the declining popularity of Canadian e-commerce company Shopify. https://ca.finance.yahoo.com/news/once-darling-ottawa-shopify-increasingly-130000495.html
+
+- A report finds that financial firms are looking into integrating blockchain technology. https://www.tradersmagazine.com/featured_articles/financial-firms-look-into-blockchain-integration-finds-report/
+
+- Moody's launches a new digital asset monitor to track risk in the crypto space. https://www.moodysanalytics.com/articles/2023/moody_launches_new_digital_asset_monitor_to_track_risk
+
+- Bakkt shifts focus to custody services and adds support for Dogecoin and Shiba Inu. https://cointelegraph.com/news/bakkt-shifts-focus-custody-services-adds-cryptocurrency-support-doge-shib-
+
+- An article discussing concerns around an AI assistant app for kids and the need for more oversight of how children's data is collected and used. https://www.washingtonpost.com/technology/2023/11/16/ai-kids-app-review/
+
+- Bitcoin proponents in Argentina have drafted legislation aimed at preserving blockchain decentralization and preventing overregulation of the industry. https://cointelegraph.com/news/bitcoiners-pitch-draft-bill-to-preserve-blockchain-decentralization-in-argentina
 
 ### Odds & Ends
 
-- https://www.benzinga.com/markets/equities/23/10/35254672/ferrari-joins-crypto-race-begins-accepting-digital-payments-in-us
+- **Blockgeeks published** a handy [beginner's guide to Solana](https://blockgeeks.com/guides/how-solana-works-a-beginners-guide/).
 
+- **Ferrari announced** that U.S. customers can now buy its cars using crypto. The automaker plans to offer such payments in Europe soon as well through a partnership wtih BitPay. ([Benzinga](https://www.benzinga.com/markets/equities/23/10/35254672/ferrari-joins-crypto-race-begins-accepting-digital-payments-in-us))
 
-- New Knight Foundation CEO: https://knightfoundation.org/press/releases/maribel-perez-wadsworth-to-lead-knight/
-
-- https://variety.com/2023/theater/global/gwyneth-paltrow-ski-trial-musical-london-gwyneth-goes-skiing-1235791222/
+- **The lawsuit spawned by** a skiing accident involving actress Gwyneth Paltrow and a retired optometrist has been turned into a musical in London. ([Variety](https://variety.com/2023/theater/global/gwyneth-paltrow-ski-trial-musical-london-gwyneth-goes-skiing-1235791222/))
 
 <!-- Boilerplate needs re-working. This is version from last week... -->
 
