Fleshing out summary items

--- a/newsletter/2023-11-19.md
+++ b/newsletter/2023-11-19.md
@@ -1,4 +1,4 @@
-# Trying Brave's new AI Leo 
+# Trying Brave's new AI Leo
 ## #Web3Weekly: Nov. 12-18, 2023
 
 ![Leo Hard at Work](https://w3w.news/img/leo-hard-at-work-final.jpg)
@@ -8,43 +8,29 @@
 
 ### Week in Review
 
-- Crypto VC activity has hit a new low, says PitchBook Guy: https://www.youtube.com/watch?v=LjSbkKF_m_c&pp=ygUQYmxvb21iZXJnIGNyeXB0bw%3D%3D
+- JPMorgan and Apollo Global unveil a new blockchain-based platform for private markets. https://finance.yahoo.com/news/jpmorgan-apollo-global-unveil-blockchain-051756777.html | Republic is launching a profit-sharing token on Avalanche that will pay investors venture capital-style dividends. https://www.coindesk.com/business/2023/11/17/republics-profit-sharing-token-on-avalanche-will-pay-investors-vc-dividends/
 
-- Bloomberg says correlation between bitcoin and stocks is lowest since the pandemic. https://www.msn.com/en-us/money/markets/bitcoin-stocks-correlation-now-most-negative-since-covid-s-onset/ar-AA1jXLc2
-
-- HRF launched a new CBDC tracker. https://cbdctracker.hrf.org/home
-
-- Infura launches a decentralized infrastructure network to provide blockchain access without centralized control. https://blockworks.co/news/infura-decentralized-infrastructure-network
-
-- JPMorgan and Apollo Global unveil a new blockchain-based platform for private markets. https://finance.yahoo.com/news/jpmorgan-apollo-global-unveil-blockchain-051756777.html
-
-- Microsoft partners with Tencent and Infura to provide decentralized identity services on their blockchain infrastructure network. https://cointelegraph.com/news/microsoft-tencent-infura-network-partnership
-
-- An article discussing how Asia is becoming a hub for web3 game development while the US dominates funding in the space. https://venturebeat.com/games/game7-says-asia-is-a-hub-for-web3-game-development-while-u-s-dominates-funding/
-
-- Money is flowing back into crypto stablecoins for the first time since the 2022 market collapse. https://www.thestreet.com/crypto/markets/money-is-flowing-into-crypto-stablecoins-for-first-time-since-collapse-of-2022
+- Infura launches a decentralized infrastructure network to provide blockchain access without centralized control. https://blockworks.co/news/infura-decentralized-infrastructure-network | Microsoft partners with Tencent and Infura to provide decentralized identity services on their blockchain infrastructure network. https://cointelegraph.com/news/microsoft-tencent-infura-network-partnership
 
 - A leading Chinese games company is allocating $100 million to invest in Bitcoin and other cryptocurrencies. https://www.thestreet.com/crypto/markets/leading-chinese-games-company-is-allocating-100-million-to-bitcoin-crypto
 
+- Money is flowing back into crypto stablecoins for the first time since the 2022 market collapse. https://www.thestreet.com/crypto/markets/money-is-flowing-into-crypto-stablecoins-for-first-time-since-collapse-of-2022
+
+- **Global venture investment in crypto** fell to $1.9 billion in the third quarter, [down 34%](https://www.youtube.com/watch?v=LjSbkKF_m_c&pp=ygUQYmxvb21iZXJnIGNyeXB0bw%3D%3D) from the second period, according to PitchBook analyst Robert Le.
+
+- **Bitcoin and global stock markets are now negatively correlated** to a greater degree than any time since the start of the COVID pandemic in early 2020. ([Bloomberg](https://www.msn.com/en-us/money/markets/bitcoin-stocks-correlation-now-most-negative-since-covid-s-onset/ar-AA1jXLc2))
+
+- **The Human Rights Foundation** launched a [new interactive website](https://cbdctracker.hrf.org/home) to track various countries' adoption of central bank digital currencies. HRF opposes such projects due to concerns over privacy and civil liberties.
+
+- An article discussing how Asia is becoming a hub for web3 game development while the US dominates funding in the space. https://venturebeat.com/games/game7-says-asia-is-a-hub-for-web3-game-development-while-u-s-dominates-funding/
+
 - An article about a crypto laundering scheme moving funds from China to Taiwan through bank transactions. https://decrypt.co/206413/crypto-laundering-scheme-bank-transactions-china-taiwan
 
-- Chelsea Manning discusses privacy issues around AI technology at the Web Summit conference. https://decrypt.co/206449/chelsea-manning-web-summit-ai-technology-privacy
-
-- An opinion piece speculating that SEC chair Gary Gensler's political ambitions may be affecting the decision on a spot Bitcoin ETF. https://www.coindesk.com/policy/2023/11/14/cathie-wood-speculates-gary-genslers-political-ambitions-are-affecting-spot-btc-etf-judgement/
-
-- The SEC delays a decision on a Hashdex Bitcoin spot ETF and a Grayscale Ether futures filing. https://www.coindesk.com/policy/2023/11/15/sec-delays-decision-on-hashdex-bitcoin-spot-etf-application-grayscale-ether-futures-filing/
-
-- Republic is launching a profit-sharing token on Avalanche that will pay investors venture capital-style dividends. https://www.coindesk.com/business/2023/11/17/republics-profit-sharing-token-on-avalanche-will-pay-investors-vc-dividends/
-
-- Mastercard says customers are too comfortable with today's money to adopt CBDCs according to comments made to CNBC. https://www.coindesk.com/policy/2023/11/17/mastercard-says-customers-are-too-comfortable-with-todays-money-for-adoption-of-cbdcs-cnbc/
-
-- BitGo CFO predicts more Bitcoin ETF rejections from the SEC are likely in the near future. https://www.coindesk.com/business/2023/11/17/more-bitcoin-etf-rejections-quite-likely-bitgos-belshe-says/
+- **ETF obsession continues.** An opinion piece speculating that SEC chair Gary Gensler's political ambitions may be affecting the decision on a spot Bitcoin ETF. https://www.coindesk.com/policy/2023/11/14/cathie-wood-speculates-gary-genslers-political-ambitions-are-affecting-spot-btc-etf-judgement/ | The SEC delays a decision on a Hashdex Bitcoin spot ETF and a Grayscale Ether futures filing. https://www.coindesk.com/policy/2023/11/15/sec-delays-decision-on-hashdex-bitcoin-spot-etf-application-grayscale-ether-futures-filing/ | BitGo CFO predicts more Bitcoin ETF rejections from the SEC are likely in the near future. https://www.coindesk.com/business/2023/11/17/more-bitcoin-etf-rejections-quite-likely-bitgos-belshe-says/
 
 - Eigenlayer plans to enable staking with operators of its data availability layer in the first half of 2024. https://www.theblock.co/post/263473/eigenlayer-to-enable-staking-with-operators-of-data-availability-layer-in-h1-2024
 
 - Grayscale CEO hints that a Bitcoin ETF approval from the SEC may be coming soon, saying the company is ready for approval. https://www.thestreet.com/crypto/markets/grayscale-ceo-hints-at-bitcoin-etf-approval-were-ready-for-the-main-event
-
-- An article on the declining popularity of Canadian e-commerce company Shopify. https://ca.finance.yahoo.com/news/once-darling-ottawa-shopify-increasingly-130000495.html
 
 - A report finds that financial firms are looking into integrating blockchain technology. https://www.tradersmagazine.com/featured_articles/financial-firms-look-into-blockchain-integration-finds-report/
 
@@ -52,13 +38,12 @@
 
 - Bakkt shifts focus to custody services and adds support for Dogecoin and Shiba Inu. https://cointelegraph.com/news/bakkt-shifts-focus-custody-services-adds-cryptocurrency-support-doge-shib-
 
-- An article discussing concerns around an AI assistant app for kids and the need for more oversight of how children's data is collected and used. https://www.washingtonpost.com/technology/2023/11/16/ai-kids-app-review/
-
-- Bitcoin proponents in Argentina have drafted legislation aimed at preserving blockchain decentralization and preventing overregulation of the industry. https://cointelegraph.com/news/bitcoiners-pitch-draft-bill-to-preserve-blockchain-decentralization-in-argentina
 
 ### Odds & Ends
 
 - **Blockgeeks published** a handy [beginner's guide to Solana](https://blockgeeks.com/guides/how-solana-works-a-beginners-guide/).
+
+- An article discussing concerns around an AI assistant app for kids and the need for more oversight of how children's data is collected and used. https://www.washingtonpost.com/technology/2023/11/16/ai-kids-app-review/
 
 - **Ferrari announced** that U.S. customers can now buy its cars using crypto. The automaker plans to offer such payments in Europe soon as well through a partnership wtih BitPay. ([Benzinga](https://www.benzinga.com/markets/equities/23/10/35254672/ferrari-joins-crypto-race-begins-accepting-digital-payments-in-us))
 
